traces/bug_552.txt
src/femlib/GQuadTree.cpp:640: error: DEAD_STORE
  The value written to &it00 (type int) is never used.
Showing all 1 steps of the trace


src/femlib/GQuadTree.cpp:640:7: Write of unused value
638.   	}*/
639.           ffassert(v); // bug !!!!
640.         it00=it=Th.Contening(v);
             ^
641.         nddd=  Norme2(P-*v);
642.         if(verbosity>200)
